--- a/jenkins-pipeline.yaml
+++ b/jenkins-pipeline.yaml
@@ -18,7 +18,7 @@ spec:
             sh "cp ${jarFile} app.jar"
           }
           stage('Deploy') {
-            sh "oc new-build --name hello-world --binary -n my-project --image-stream=openjdk18-openshift  || true"
+            sh "oc new-build --name hello-world --binary --image-stream=openjdk18-openshift  || true"
             sh "oc start-build hello-world --from-file=app.jar -n my-project --follow --wait"
             sh "oc new-app hello-world || true"
             sh "oc expose svc/hello-world || true"
